--- a/contato.html
+++ b/contato.html
@@ -99,7 +99,7 @@
           <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
           <a href="tel:+552199999999">+55 21 9999-9999</a>
         </div>
-        <p><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
       </div>
     </div>
 
@@ -115,7 +115,7 @@
           <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
           <a href="tel:+551199999999">+55 11 9999-9999</a>
         </div>
-        <p><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
       </div>
     </div>
   </article>
