--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,14 @@
   <title>Contato | Bikcraft</title>
   <meta name="description" content="Contato.">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
+  <script>document.documentElement.classList.add("js");</script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@1,18..144,900&family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body id="contato">
@@ -42,7 +49,7 @@
         <div class="contato-endereco font-2-s cor-4">
           <p>Rua Ali Perto, 35</p>
           <p>Rio de Janeiro - RJ</p>
-          <p>Brasil - Terra - Via Láctea</p>
+          <p>Brasil - Terra - Vita Láctea</p>
         </div>
         <address class="contato-meios font-2-s cor-4">
           <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
@@ -69,7 +76,7 @@
           </div>
           <div>
             <label for="telefone">Telefone</label>
-            <input type="text" id="telefone" name="telefone" placeholder="(xx)xxxx-xxxx">
+            <input type="text" id="telefone" name="telefone" placeholder="(21) 9999-9999">
           </div>
           <div class="col-2">
             <label for="email">Email</label>
@@ -86,20 +93,20 @@
   </main>
 
   <article class="lojas container">
-    <h2 class="font-1-xxl">lojas locais <span class="cor-p1">.</span></h2>
+    <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
     <div class="lojas-item">
       <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
       <div class="lojas-conteudo">
         <h3 class="font-1-xl">Rio de Janeiro</h3>
         <div class="lojas-dados font-2-s cor-8">
           <p>Rua Ali Perto, 25</p>
-          <p>Rio de Janeiro - Rj</p>
+          <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="lojas-dados font-2-s cor-8">
           <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
           <a href="tel:+552199999999">+55 21 9999-9999</a>
         </div>
-        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
       </div>
     </div>
 
@@ -115,7 +122,7 @@
           <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
           <a href="tel:+551199999999">+55 11 9999-9999</a>
         </div>
-        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
       </div>
     </div>
   </article>
@@ -157,6 +164,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
